# picontrol

./: .clang-format  .gitignore  Dockerfile  README.md  pyproject.toml  recipe.py
firmware/: CMakeLists.txt
firmware/lib/: CMakeLists.txt
firmware/lib/commands/: CMakeLists.txt
firmware/lib/commands/inc/commands/: commands.h
firmware/lib/commands/src/: commands.cpp  gpio.cpp  i2c.cpp  spi.cpp
firmware/lib/defs/: CMakeLists.txt
firmware/lib/defs/inc/defs/: defs.hpp
firmware/lib/gpio/: CMakeLists.txt
firmware/lib/gpio/inc/gpio/: gpio_driver.h
firmware/lib/gpio/src/: gpio_driver.cpp
firmware/lib/i2c/: CMakeLists.txt
firmware/lib/i2c/inc/i2c/: i2c_driver.h
firmware/lib/i2c/src/: i2c_driver.cpp
firmware/lib/queue/: CMakeLists.txt
firmware/lib/queue/inc/queue/: queue.hpp
firmware/lib/queue/src/: queue.cpp
firmware/lib/spi/: CMakeLists.txt
firmware/lib/spi/inc/spi/: spi_driver.h
firmware/lib/spi/src/: spi_driver.cpp  spi_flash.cpp
firmware/lib/tinyusb/: CMakeLists.txt
firmware/lib/tinyusb/inc/: context.h  tinyusb.hpp  tusb_config.h
firmware/lib/tinyusb/src/: tinyusb.cpp  tinyusb_cb.c  usb_descriptors.c
firmware/lib/uart/: CMakeLists.txt
firmware/lib/uart/inc/uart/: uart_driver.h
firmware/lib/uart/src/: uart_driver.cpp
firmware/lib/uart_passthrough/: CMakeLists.txt
firmware/lib/uart_passthrough/inc/uart_passthrough/: uart_passthrough.h
firmware/lib/uart_passthrough/src/: uart_passthrough.cpp
firmware/main/: CMakeLists.txt
firmware/main/inc/main/: core1_main.hpp
firmware/main/src/: core1_main.cpp  main.cpp
package/: command.py  control.py  defs.py  flash_commands.py  gpio_commands.py  i2c_commands.py  picontrol.py  pyproject.toml  serial_comm.py  spi_commands.py  usb_comm.py  vendor_comm.py
package/picontrol/: command.py  exceptions.py  flash_commands.py  gpio_commands.py  i2c_commands.py  picontrol.py  ports.py  return_codes.py  serial_comm.py  spi_commands.py
perf/: perf.py  usb_comm.py  usb_composite_perf.py
