[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "picontrol"
version = "0.1.0"
dependencies = [
    "pyusb==1.3.1"
]
requires-python = ">=3.10"
authors = [
  { name="Seweryn Rusecki" },
]
description = "Raspberry Pi Pico based controller for embedded projects"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/serweryn617/picontrol"
Issues = "https://github.com/serweryn617/picontrol/issues"

[project.scripts]
picontrol = "picontrol:main"
